# SummerInternship2020

./: CMakeLists.txt
Shivani/Sample-Cuda-Program/Udemy-tutorial/vd4/: kernel  kernel.cu
Shivani/Sample-Cuda-Program/c++-add/: add  add.cpp
Shivani/Sample-Cuda-Program/cuda_add/: .cuda-add.h.swp  CMakeLists.txt  cuda-add-main.cu  cuda-add.cu  cuda-add.h
Shivani/Sample-Cuda-Program/sample-c++/c++-add-test/: add  main.cpp
Shivani/Sample-Cuda-Program/sample-c++/cuda-add-test/: cuda-add.cu  cuda-multiply.cu  cuda-vector  main.cu  result
Shivani/Sample-Cuda-Program/sample-c++/cuda-c++-test/: .wrapper_function.cu.swp  main.cpp  wrapper-result  wrapper_function.cu  wrapper_function.cuh
Shivani/Sample-Cuda-Program/test/: cmake-cuda-add  cuda-add.cpp  cuda-add.h
Shivani/timing/: add-global-timing.0  timing.0
Test-C++-outToIn/: 3d-test.cu  Makefile  main.cpp
Test-C++/Test-C++/: 3d-test.h
Test-CUDA -I/Test-C++/: 3d-test.cu  launcher.cu  launcher.cuh
Test-CUDA/Test-C++/: 3d-test.cpp  3d-test.h  launcher.cuh  main.cpp
Test-CUDA1/Test-C++/: 3d-test.cu  3d-test.cuh  a.out  main.cpp
brian_folder/Test-C++/: 3d-test.cu  3d-test.cuh  main
cuda-workspace/.metadata/: version.ini
cuda-workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
cuda-workspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
cuda-workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
cuda-workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
cuda-workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.casper01_0/: node.properties
cuda-workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.casper01_0/FP.local.files_0/: node.properties
cuda-workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.casper01_0/FP.org.eclipse.ptp.remote.rse.core._0/: node.properties
cuda-workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.casper01_0/H.local_16/: node.properties
cuda-workspace/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
john_folder/Test-C++/: .3d-test.cu.swp  3d-test.cu  3d-test.cuh  a.out  main.cpp
john_folder/shivani_latest/: CMakeCache.txt  Makefile  buildlog.txt  cmake_install.cmake  sample.txt  timing.0
john_folder/shivani_latest/include/: solver.inc
john_folder/shivani_latest/include/ASAP/: ConfigHash.h
john_folder/shivani_latest/src/: CudaLauncherFunctions.cu  CudaLauncherFunctions.cuh  ErrorData.cpp  FrameCenter.cpp  RecursiveFilter.cpp  RecursiveFilter.h  Xml.cpp
john_folder/shivani_latest/src.old/: CostFunctionCOAMPS.cpp  CostFunctionXYZ.cpp  Dorade.cpp  RecursiveFilter.h  VarDriver3D.cpp  VarDriver3D.h  main.cpp
shivani_latest/: CMakeLists.txt  Makefile  README.txt  buildlog.txt  cmake_install.cmake  runjobs  runjobs.slurm  timing.0
shivani_latest/cmake/Modules/: FindGeographicLib.cmake  FindPETSc.cmake
shivani_latest/src/: BkgdArr.cpp  CostFunction.cpp  CostFunction.h  CostFunction3D.cpp  CostFunction3D.h  CostFunctionXYP.cpp  CudaLauncherFunctions.cu  FrameCenter.h  MetObs.cpp  VarDriver.cpp  samurai.cpp
shivani_latest/src.old/: BkgdObsLoaders.cpp  CostFunction3D.cpp  CudaLauncherFunctions.cu  CudaLauncherFunctions.cuh  VarDriver.h
